k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: open-source-portal
  labels:
    app.kubernetes.io/name: open-source-project-portal
    app.kubernetes.io/part-of: devops-project-91
